<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_gray_white_5"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="10sp"
            android:text="@string/allSongSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_next"
            android:layout_width="10dp"
            android:layout_height="10dp" />
    </LinearLayout>

    <TextView
        android:padding="8dp"
        android:id="@+id/tv_rock"
        android:text="@string/rock"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="8dp"
        android:layout_toStartOf="@id/tv_rock"
        android:id="@+id/tv_electric"
        android:text="@string/electric"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="8dp"
        android:id="@+id/tv_eusa"
        android:text="@string/EUSA"
        android:textSize="12sp"
        android:layout_toStartOf="@id/tv_electric"
        android:textColor="@color/colorBlack"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>